# db_task

./: .gitignore  API接口文档.md  pyproject.toml  requirements.txt  数据字典.md  数据库课程设计情况一览表.md  数据库项目作业.md  项目背景与开发环境说明.md
.streamlit/: config.toml
backend/: __init__.py  main.py
backend/config/: __init__.py  db_config.py
backend/crud/: __init__.py  ai_crud.py  ai_memories_crud.py  assignment_submissions_crud.py  assignments_crud.py  auth_crud.py  course_chapters_crud.py  course_resources_crud.py  courses_crud.py  enrollment_relations_crud.py  learning_progress_crud.py  notes_crud.py  notifications_crud.py  resource_chunks_crud.py  resource_tags_crud.py  resource_versions_crud.py  roles_crud.py  study_plans_crud.py  tags_crud.py  teaching_relations_crud.py  users_crud.py
backend/models/: __init__.py  ai_memories_mod.py  ai_messages_mod.py  ai_sessions_mod.py  assignment_submissions_mod.py  assignments_mod.py  course_chapters_mod.py  course_resources_mod.py  courses_mod.py  enrollment_relations_mod.py  learning_progress_mod.py  notes_mod.py  notifications_mod.py  resource_chunks_mod.py  resource_tags_mod.py  resource_versions_mod.py  roles_mod.py  study_plans_mod.py  tags_mod.py  teaching_relations_mod.py  users_mod.py
backend/routers/: __init__.py  admin.py  ai.py  assignments.py  auth.py  courses.py  learning.py  users.py
frontend_streamlit/: __init__.py  app.py  config.py  state.py
scripts/: check_indexes.py  check_jsonb_query.py  create_recommended_indexes.py  migrate_ai_memories_pgvector.py  migrate_ai_messages_to_jsonb.py  vectorize_resources.py
(+60 files in other folders)
