[project]
name = "smart-learning-platform"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.2.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pgvector>=0.4.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.46.1",
    "uvicorn>=0.48.0",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
